# credit-mlops

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-monitor.txt  requirements.txt
api/: decision.py  main.py  model_loader.py  schemas.py
artifacts/: fallback_model.joblib  scorecard_iv_table.csv
monitoring/: Dockerfile.monitor  alert_rules.yml  drift_report.py  nannyml_monitor.py  nannyml_reference.csv  prometheus.yml
monitoring/grafana/: dashboard.json  dashboards.yml
optimization/: benchmark_knn_neighbors.py
reports/: debug_workflows.md  demo.md  lesson-learned.md  reproduce.md  results.md  spec_feature_pipeline_artifact.md
reports/nannyml/: latest_summary.json
scripts/: _db.py  promote_model.py  rollback_model.py
src/: data_prep.py  evaluate.py  features.py  pipeline.py  register.py  save_pipeline.py  scorecard.py  train.py
tests/: conftest.py  test_api.py  test_chaos.py  test_contract.py  test_decision.py  test_deployment.py  test_evaluate.py  test_features.py  test_scorecard.py
ui/: Dockerfile  streamlit_app.py
