[project]
name = "credit-mlops"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
    "pandas==2.2.3",
    "numpy==1.26.4",
    "scikit-learn==1.8.0",
    "xgboost==3.2.0",
    "imbalanced-learn==0.14.1",
    "mlflow==3.12.0",
    "dagshub==0.7.0",
    "fastapi==0.136.3",
    "uvicorn[standard]==0.48.0",
    "pydantic==2.11.7",
    "pydantic-settings==2.6.1",
    "python-dotenv==1.1.0",
    "sqlalchemy==2.0.50",
    "psycopg2-binary==2.9.12",
    "redis==8.0.0",
    "prometheus-client==0.24.1",
    "evidently==0.7.21",
    "joblib==1.5.3",
    "scipy==1.15.3",
]

[project.optional-dependencies]
ui = [
    "streamlit==1.45.1",
]
dev = [
    "pytest==9.0.3",
    "httpx==0.28.1",
    "pytest-asyncio==1.4.0",
    "faker>=40.0.0",
]

[dependency-groups]
ui = [
    "streamlit==1.45.1",
]
dev = [
    "pytest==9.0.3",
    "httpx==0.28.1",
    "pytest-asyncio==1.4.0",
    "faker>=40.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
